--- a/web/templates/CourseModal.ejs
+++ b/web/templates/CourseModal.ejs
@@ -72,47 +72,54 @@ var extraInfo = extra_info;
 var longTitle = long_title;
 %>
 <div class="course-modal modal" id="course-modal<%= ociId %>" tabindex="-1">
-	<div class="row-fluid">
-		<div class="modal-header span12">
-			<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-			<p>
-				<span class="badges">
-				<% if (extraInfo) { %><span class="badge badge-important"><%= shortExtraInfo[extraInfo] %></span><% } %>
-				<% for (var i = 0; i < skills.length; i++) { %><span class="badge badge-skill"><%= skills[i] %></span><% } %>
-				<% for (var i = 0; i < areas.length; i++) { %><span class="badge badge-area"><%= areas[i] %></span><% } %>
-				</span>
-				<small>
-				<% for (var i = 0; i < codes.length; i++) {
+  <div class="row-fluid">
+    <div class="modal-header span12">
+      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+      <p>
+        <span class="badges">
+          <% if (extraInfo) { %><span class="badge badge-important"><%= shortExtraInfo[extraInfo] %></span><% } %>
+          <% for (var i = 0; i < skills.length; i++) { %><span class="badge badge-skill"><%= skills[i] %></span><% } %>
+          <% for (var i = 0; i < areas.length; i++) { %><span class="badge badge-area"><%= areas[i] %></span><% } %>
+        </span>
+        <small>
+          <% for (var i = 0; i < codes.length; i++) {
 					var code = codes[i]; %>
-					<% if (i != 0) { %> / <% } %><span class="text-info"><%= code.subject %>&nbsp;<%= code.number %><% if (code.section != 1) { %>&nbsp;<%= ('00' + code.section).substr(-2) %><% } %></span>
-				<% } %>
-				</small>
-			</p>
-			<div class="pull-right">
-				<!-- <button type="button" class="btn show-textbooks"><i class="icon-book"></i> Textbooks</button> -->
-				<a href="<%= textbookLink %>" class="btn textbooks-button" target="_blank"
-					title="View textbooks at the Yale Barnes &amp; Noble bookstore">
-					<i class="icon-book"></i> Textbooks
-				</a>
-				<button type="button" class="btn add-remove-worksheet"><i class="icon-plus"></i> Add to worksheet</button>
-			</div>
-			<h4><%= longTitle %></h4>
-		</div>
-	</div>
-	<div class="modal-body"><div class="row-fluid">
-		<div class="course-info span7">
-			<p><%= description %></p>
-			<% if (requirements) { %><p><%= requirements %></p><% } %>
-			<table class="table table-bordered">
-				<tr>
-					<th>Taught by</th>
-					<td><% for (var i = 0; i < professors.length; i++) { %><% if (i != 0) { %>, <% } %><%= professors[i] %><% } %></td>
-				</tr>
-				<tr>
-					<th>Meets</th>
-					<td><%= times.long_summary %></td>
-				</tr>
-				<%
+          <% if (i != 0) { %> / <% } %><span
+            class="text-info"><%= code.subject %>&nbsp;<%= code.number %><% if (code.section != 1) { %>&nbsp;<%= ('00' + code.section).substr(-2) %><% } %></span>
+          <% } %>
+        </small>
+      </p>
+      <div class="pull-right">
+        <!-- <button type="button" class="btn show-textbooks"><i class="icon-book"></i> Textbooks</button> -->
+        <a href="<%= textbookLink %>" class="btn textbooks-button" target="_blank"
+          title="View textbooks at the Yale Barnes &amp; Noble bookstore">
+          <i class="icon-book"></i> Textbooks
+        </a>
+        <button type="button" class="btn add-remove-worksheet"><i class="icon-plus"></i> Add to worksheet</button>
+      </div>
+      <h4><%= longTitle %></h4>
+    </div>
+  </div>
+  <div class="modal-body">
+    <div class="row-fluid">
+      <div class="course-info span7">
+        <p><%= description %></p>
+        <% if (requirements) { %><p><%= requirements %></p><% } %>
+        <table class="table table-bordered">
+          <tr>
+            <th>Taught by</th>
+            <td><% for (var i = 0; i < professors.length; i++) { %><% if (i != 0) { %>,
+              <% } %><%= professors[i] %><% } %></td>
+          </tr>
+          <tr>
+            <th>Meets</th>
+            <td><%= times.long_summary %></td>
+          </tr>
+          <tr>
+            <th>Cross listed as</th>
+            <td>Wowza</td>
+          </tr>
+          <%
 				var flagTexts = [];
 				forEach(flags, function(flagId, flag) {
 					if (flag.length != 1) {
@@ -120,47 +127,47 @@ var longTitle = long_title;
 					}
 				});
 				%>
-				<% if (flagTexts.length != 0) { %>
-				<tr>
-					<th>Notes</th>
-					<td>
-					<% for (var i = 0; i < flagTexts.length; i++) { %>
-						<% if (i != 0) { %><br><% } %><%= flagTexts[i] %>
-					<% } %>
-					</td>
-				</tr>
-				<% } %>
+          <% if (flagTexts.length != 0) { %>
+          <tr>
+            <th>Notes</th>
+            <td>
+              <% for (var i = 0; i < flagTexts.length; i++) { %>
+              <% if (i != 0) { %><br><% } %><%= flagTexts[i] %>
+              <% } %>
+            </td>
+          </tr>
+          <% } %>
 
-				<% if (syllabus_url || course_home_url) { %>
-				<tr>
-					<th>Links</th>
-					<td>
-						<% if (syllabus_url) { %><a href="<%= syllabus_url %>" target="_blank">Syllabus</a><% } %>
-						<% if (course_home_url) { %><a href="<%= course_home_url %>" target="_blank">Course Home</a><% } %>
-					</td>
-				<% } %>
-				<% if (friends.length != 0) { %>
-				<tr>
-					<th>Friends shopping</th>
-					<td>
-					<% for (var i = 0; i < friends.length; i++) { %>
-						<%= friends[i].name %><br>
-					<% } %>
-					</td>
-				<% } %>
-				</tr>
-				<tr>
-					<th>Friends who took this</th>
-					<td>
-					<% if (coursesTakenPrompted == 'Shared') { %>
-						<% if (taken_before.length == 0) { %>
-							None
-						<% } %>
-						<% for (var i = 0; i < taken_before.length; i++) {
+          <% if (syllabus_url || course_home_url) { %>
+          <tr>
+            <th>Links</th>
+            <td>
+              <% if (syllabus_url) { %><a href="<%= syllabus_url %>" target="_blank">Syllabus</a><% } %>
+              <% if (course_home_url) { %><a href="<%= course_home_url %>" target="_blank">Course Home</a><% } %>
+            </td>
+            <% } %>
+            <% if (friends.length != 0) { %>
+          <tr>
+            <th>Friends shopping</th>
+            <td>
+              <% for (var i = 0; i < friends.length; i++) { %>
+              <%= friends[i].name %><br>
+              <% } %>
+            </td>
+            <% } %>
+          </tr>
+          <tr>
+            <th>Friends who took this</th>
+            <td>
+              <% if (coursesTakenPrompted == 'Shared') { %>
+              <% if (taken_before.length == 0) { %>
+              None
+              <% } %>
+              <% for (var i = 0; i < taken_before.length; i++) {
 							var entry = taken_before[i];
 							%>
-							<%= entry.name %>
-							<% if (entry.season != 0) {
+              <%= entry.name %>
+              <% if (entry.season != 0) {
 								var year = entry.season.toString().substring(0, 4);
 								var season = '';
 								switch (entry.season.toString().substring(4, 6)) {
@@ -169,74 +176,76 @@ var longTitle = long_title;
 									case '03': season = 'Fall'; break;
 								}
 								%>
-								(<%= year %> <%= season %>)
-							<% } %>
-							<br>
-						<% } %>
-					<% } else { %>
-						<a class="btn" href="/UpdateCoursesTaken">See which friends have taken this</a>
-					<% } %>
-					</td>
-				</tr>
-			</table>
-		</div>
-		<div class="course-eval span5">
-			<h5>Evaluations</h5>
-			<div class="row-fluid">
-				<div class="span12">
-					<p><span class="label">Same prof. and class</span> <span class="label label-primary">Same prof.</span> <span class="label label-inverse">Same course</span></p>
-				</div>
-			</div>
-			<% if (!evaluationsEnabled) { %>
-			<a class="btn btn-info eval-button" href="/EnableEvaluations">
-				Turn on evaluations
-				<div class="smaller">Evaluations are not yet enabled! Click to enable the snappiest evaluations ever.</div>
-			</a>
-			<% } else if (!evaluations.same_both && !evaluations.same_professors && !evaluations.same_class) { %>
-			<div class="alert alert-info">There are no evaluations for this course or professor.</div>
-			<% } %>
+              (<%= year %> <%= season %>)
+              <% } %>
+              <br>
+              <% } %>
+              <% } else { %>
+              <a class="btn" href="/UpdateCoursesTaken">See which friends have taken this</a>
+              <% } %>
+            </td>
+          </tr>
+        </table>
+      </div>
+      <div class="course-eval span5">
+        <h5>Evaluations</h5>
+        <div class="row-fluid">
+          <div class="span12">
+            <p><span class="label">Same prof. and class</span> <span class="label label-primary">Same prof.</span> <span
+                class="label label-inverse">Same course</span></p>
+          </div>
+        </div>
+        <% if (!evaluationsEnabled) { %>
+        <a class="btn btn-info eval-button" href="/EnableEvaluations">
+          Turn on evaluations
+          <div class="smaller">Evaluations are not yet enabled! Click to enable the snappiest evaluations ever.</div>
+        </a>
+        <% } else if (!evaluations.same_both && !evaluations.same_professors && !evaluations.same_class) { %>
+        <div class="alert alert-info">There are no evaluations for this course or professor.</div>
+        <% } %>
 
-			<% for (var i = 0; i < evaluations.same_both.length; i++) {
+        <% for (var i = 0; i < evaluations.same_both.length; i++) {
 				var evaluation = evaluations.same_both[i]; %>
-				<div class="row-fluid eval-row">
-					<%= include('EvaluationButton.ejs', {
+        <div class="row-fluid eval-row">
+          <%= include('EvaluationButton.ejs', {
 						btnClass: '',
 						evaluation: evaluation,
 						tooltip: 'Same professor and class'
 					}) %>
-					<div class="span7">
-						<%= include('EvaluationBarGraph.ejs', { evaluation: evaluation }) %>
-					</div>
-				</div>
-			<% } %>
+          <div class="span7">
+            <%= include('EvaluationBarGraph.ejs', { evaluation: evaluation }) %>
+          </div>
+        </div>
+        <% } %>
 
-			<% for (var i = 0; i < evaluations.same_professors.length; i++) {
+        <% for (var i = 0; i < evaluations.same_professors.length; i++) {
 				var evaluation = evaluations.same_professors[i]; %>
-				<div class="row-fluid eval-row">
-					<%= include('EvaluationButton.ejs', {
+        <div class="row-fluid eval-row">
+          <%= include('EvaluationButton.ejs', {
 						btnClass: 'btn-primary',
 						evaluation: evaluation,
 						tooltip: 'Same professor'
 					}) %>
-					<div class="span7">
-						<%= include('EvaluationBarGraph.ejs', { evaluation: evaluation }) %>
-					</div>
-				</div>
-			<% } %>
+          <div class="span7">
+            <%= include('EvaluationBarGraph.ejs', { evaluation: evaluation }) %>
+          </div>
+        </div>
+        <% } %>
 
-			<% for (var i = 0; i < evaluations.same_class.length; i++) {
+        <% for (var i = 0; i < evaluations.same_class.length; i++) {
 				var evaluation = evaluations.same_class[i]; %>
-				<div class="row-fluid eval-row">
-					<%= include('EvaluationButton.ejs', {
+        <div class="row-fluid eval-row">
+          <%= include('EvaluationButton.ejs', {
 						btnClass: 'btn-inverse',
 						evaluation: evaluation,
 						tooltip: 'Same course code'
 					}) %>
-					<div class="span7">
-						<%= include('EvaluationBarGraph.ejs', { evaluation: evaluation }) %>
-					</div>
-				</div>
-			<% } %>
-		</div>
-	</div></div>
+          <div class="span7">
+            <%= include('EvaluationBarGraph.ejs', { evaluation: evaluation }) %>
+          </div>
+        </div>
+        <% } %>
+      </div>
+    </div>
+  </div>
 </div>
